--- a/Website/CSS/HomePage/homepage.css
+++ b/Website/CSS/HomePage/homepage.css
@@ -60,17 +60,25 @@
 }
 
 .boxes {
-    display: grid;
     position: relative;
-    grid-template-columns: 1fr 1fr 1fr;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .box {
+    display: grid;
+    grid-template-rows: 2fr 1fr;
     position: absolute;
     left: 0;
     right: 0;
 
     height: 200px;
+}
 
+.top-box {
     background-color: blue;
+}
+
+.bottom-box {
+    background-color: grey;
 }
